.kubernetes/deploy-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jexactyl-app
spec:
  selector:
    matchLabels:
      app: jexactyl-app
  template:
    metadata:
      labels:
        app: jexactyl-app
    spec:
      containers:
      - name: php
        image: arsolitt/jexactyl-php:latest
        volumeMounts:
          - name: shared-code
            mountPath: /var/www/panel
          - name: php-fpm-config
            mountPath: /usr/local/etc/php-fpm.d/www.conf
            subPath: www.conf
        resources:
          limits:
            memory: "2048Mi"
            cpu: "2000m"
          requests:
            memory: "128Mi"
            cpu: "100m"
        ports:
        - containerPort: 9000
      - name: nginx
        image: arsolitt/jexactyl-nginx:latest
        volumeMounts:
          - name: shared-code
            mountPath: /var/www/panel
          - name: nginx-config
            mountPath: /etc/nginx/nginx.conf
            subPath: nginx.conf
        resources:
          limits:
            memory: "2048Mi"
            cpu: "2000m"
          requests:
            memory: "128Mi"
            cpu: "100m"
        ports:
        - containerPort: 80
      volumes:
        - name: shared-code
          emptyDir: {}
        - name: nginx-config
          configMap:
            name: nginx-config
        - name: php-fpm-config
          configMap:
            name: php-fpm-config
