.kubernetes/deploy-queue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jexactyl-queue
spec:
  selector:
    matchLabels:
      app: jexactyl-queue
  template:
    metadata:
      labels:
        app: jexactyl-queue
    spec:
      containers:
      - name: queue
        image: arsolitt/jexactyl-php:latest
        command: ["php"]
        args: ["/home/app/artisan", "queue:work", "--verbose", "--tries=3"]
        volumeMounts:
          - name: php-fpm-config
            mountPath: /usr/local/etc/php-fpm.d/www.conf
            subPath: www.conf
        resources:
          limits:
            memory: "2048Mi"
            cpu: "1000m"
          requests:
            memory: "64Mi"
            cpu: "100m"
      volumes:
        - name: php-fpm-config
          configMap:
            name: php-fpm-config
