.kubernetes/queue-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jexactyl-queue
spec:
  selector:
    matchLabels:
      app: jexactyl-queue
  template:
    metadata:
      labels:
        app: jexactyl-queue
    spec:
      containers:
      - name: jexactyl-queue
        image: arsolitt/jexactyl
        command: ["php /home/app/artisan queue:work"]
        args: ["--verbose", "--tries=3"]
        resources:
          limits:
            memory: "2048Mi"
            cpu: "1000m"
          requests:
            memory: "64Mi"
            cpu: "100m"
