.kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jexactyl-app
spec:
  type: ClusterIP
  selector:
    app: jexactyl-app
  ports:
  - protocol: TCP
    port: 80
